--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon Social Solution Services</title>
 </head>
 
 <body>
@@ -26,21 +26,21 @@
     </header>
     <div class="hero"></div>
     <main class="content">
-        <section class="content-block" id="search-engine-optimization">
+        <section class="content-section" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="desk with laptop, notebook, pens, and magnifying glass"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section class="content-block" id="online-reputation-management">
+        <section class="content-section" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="person sitting using laptop and phone on table and seeing reputation increase on screen"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section class="content-block" id="social-media-marketing">
+        <section class="content-section" id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="people gathered and working at table with words like, tweet, share, media emphasized" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -49,21 +49,21 @@
         </section>
     </main>
     <aside class="benefits">
-        <section class="benefit-block">
+        <section class="benefits-section">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="gear funnel money"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-block">
+        <section class="benefits-section">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="lightbulb head"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-block">
+        <section class="benefits-section">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="gears and dollar signs" />
             <p>
@@ -71,6 +71,7 @@
             </p>
         </section>
     </aside>
+    <button id="myBtn"><a href="#top" style="color: white">Top</a></button>
     <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
